# Burning-Contract-main

./: Anchor.toml  README.md  metadata.json  package.json
cli/: script.ts  types.ts  utils.ts
migrations/: deploy.ts
programs/burning/: Cargo.toml
programs/burning/src/: account.rs  constants.rs  error.rs  lib.rs
tests/: burning.ts
